--- a/paper/tables/appendixB_drop_table.tex
+++ b/paper/tables/appendixB_drop_table.tex
@@ -7,9 +7,9 @@
 \toprule
 mode & N & events & event\_fraction & max\_avalanche & mean\_avalanche\_nonzero & total\_topples \\
 \midrule
-drop & 64 & 58347.0 & 0.291735 & 3165.0 & 245.744391314035 & 15023337.0 \\
-drop & 128 & 61011.0 & 0.305055 & 15076.0 & 914.9628099850846 & 58346657.0 \\
-drop & 256 & 63964.0 & 0.31982 & 79165.0 & 3457.3121755987745 & 230045275.0 \\
+drop & 64 & 58347.0 & 0.292 & 3165.0 & 245.7 & 15023337.0 \\
+drop & 128 & 61011.0 & 0.305 & 15076.0 & 915.0 & 58346657.0 \\
+drop & 256 & 63964.0 & 0.320 & 79165.0 & 3457.3 & 230045275.0 \\
 \bottomrule
 \end{tabular}
 \end{table}
