--- a/paper/tables/appendixB_reset_table.tex
+++ b/paper/tables/appendixB_reset_table.tex
@@ -7,9 +7,9 @@
 \toprule
 mode & N & events & event\_fraction & max\_avalanche & mean\_avalanche\_nonzero & total\_topples \\
 \midrule
-reset & 64 & 24089.0 & 0.120445 & 1056.0 & 359.3278674913861 & 9068435.0 \\
-reset & 128 & 24089.0 & 0.120445 & 4160.0 & 1367.1267798580266 & 34412682.0 \\
-reset & 256 & 23472.0 & 0.11736 & 16510.0 & 5498.276883094752 & 134154191.0 \\
+reset & 64 & 24089.0 & 0.120 & 1056.0 & 359.3 & 9068435.0 \\
+reset & 128 & 24089.0 & 0.120 & 4160.0 & 1367.1 & 34412682.0 \\
+reset & 256 & 23472.0 & 0.117 & 16510.0 & 5498.3 & 134154191.0 \\
 \bottomrule
 \end{tabular}
 \end{table}
